--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewpot" content="width=device=width, initial-scale=1.0">
+  <meta name="theme-color" content="#8257E5">
   <title>Proffy | Sua plataforma de estudos online</title>
   
   <!-- Css de personalização do projeto -->
