--- a/give-classes.html
+++ b/give-classes.html
@@ -91,7 +91,7 @@
           </div>
         </fieldset>
 
-        <fieldset>
+        <fieldset id="schedule-item">
           <legend>Horário disponíveis
             <button id="add-time">+ Novo Horário</button>
           </legend>
